horizontal scrolling fix

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -6,6 +6,7 @@
   body,
   html {
     overflow-x: hidden;
+    -webkit-overflow-x: hidden;
   }
 
   /* Adjust subheading styles */
